internal/gatewayapi/testdata/securitypolicy-with-extauth-with-backendtlspolicy.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: default
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      hostnames:
        - www.foo.com
      parentRefs:
        - namespace: default
          name: gateway-1
          sectionName: http
      rules:
        - matches:
            - path:
                value: /foo
          backendRefs:
            - name: service-1
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-2
    spec:
      hostnames:
        - www.bar.com
      parentRefs:
        - namespace: default
          name: gateway-1
          sectionName: http
      rules:
        - matches:
            - path:
                value: /bar
          backendRefs:
            - name: service-1
              port: 8080
services:
  - apiVersion: v1
    kind: Service
    metadata:
      namespace: envoy-gateway
      name: http-backend
    spec:
      ports:
        - port: 80
          name: http
          protocol: TCP
  - apiVersion: v1
    kind: Service
    metadata:
      namespace: default
      name: grpc-backend
    spec:
      ports:
        - port: 9000
          name: grpc
          protocol: TCP
endpointSlices:
  - apiVersion: discovery.k8s.io/v1
    kind: EndpointSlice
    metadata:
      name: endpointslice-http-backend
      namespace: envoy-gateway
      labels:
        kubernetes.io/service-name: http-backend
    addressType: IPv4
    ports:
      - name: http
        protocol: TCP
        port: 80
    endpoints:
      - addresses:
          - 7.7.7.7
        conditions:
          ready: true
  - apiVersion: discovery.k8s.io/v1
    kind: EndpointSlice
    metadata:
      name: endpointslice-grpc-backend
      namespace: default
      labels:
        kubernetes.io/service-name: grpc-backend
    addressType: IPv4
    ports:
      - name: grpc
        protocol: TCP
        port: 9000
    endpoints:
      - addresses:
          - 8.8.8.8
        conditions:
          ready: true
referenceGrants:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: ReferenceGrant
    metadata:
      namespace: envoy-gateway
      name: referencegrant-1
    spec:
      from:
        - group: gateway.envoyproxy.io
          kind: SecurityPolicy
          namespace: default
        - group: gateway.networking.k8s.io
          kind: BackendTLSPolicy
          namespace: default
      to:
        - group: ''
          kind: Service
configMaps:
  - apiVersion: v1
    kind: ConfigMap
    metadata:
      name: ca-cmap
      namespace: default
    data:
      ca.crt: |
        -----BEGIN CERTIFICATE-----
        MIIDJzCCAg+gAwIBAgIUAl6UKIuKmzte81cllz5PfdN2IlIwDQYJKoZIhvcNAQEL
[...]
        -----END CERTIFICATE-----
backendTLSPolicies:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: BackendTLSPolicy
    metadata:
      name: policy-btls-http
      namespace: default
    spec:
      targetRefs:
      - group: ''
        kind: Service
        name: http-backend
        sectionName: "80"
      validation:
        caCertificateRefs:
          - name: ca-cmap
            group: ''
            kind: ConfigMap
        hostname: http-backend
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: BackendTLSPolicy
    metadata:
      name: policy-btls-grpc
      namespace: default
    spec:
      targetRefs:
      - group: ''
        kind: Service
        name: grpc-backend
        sectionName: "9000"
      validation:
        caCertificateRefs:
          - name: ca-cmap
            group: ''
            kind: ConfigMap
        hostname: grpc-backend
securityPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: SecurityPolicy
    metadata:
      namespace: default
      name: policy-for-gateway
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
      extAuth:
        http:
          backendRef:
            Name: http-backend
            Namespace: envoy-gateway
            Port: 80
          Path: /auth
          headersToBackend:
            - header1
            - header2
        failOpen: false
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: SecurityPolicy
    metadata:
      namespace: default
      name: policy-for-http-route
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: httproute-1
      extAuth:
        headersToExtAuth:
          - header1
          - header2
        grpc:
          backendRef:
            name: grpc-backend
            port: 9000
        failOpen: true
